[package]
edition = "2021"
name = "dust-cortex-m"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
description = "Drivers for Cortex-M hardware."
license = "MIT OR Apache-2.0"

[features]
cortex-m0 = ["v6m"]
cortex-m0plus = ["v6m"]
cortex-m3 = ["v7m"]
cortex-m4 = ["v7m"]
cortex-m7 = ["v7m"]
cortex-m23 = ["v8m_base"]
cortex-m33 = ["v8m_main"]

v8m_base = ["v8m"]
v8m_main = ["v8m"]

v6m = []
v7m = []
v8m = []

[dependencies]
dust = { path = "../dust", version = "0.1.0" }
dust-runtime = { path = "../dust-runtime", version = "0.1.0" }
dust-register = { path = "../dust-register", version = "0.1.0" }
volatile-register = "0.2.0"
