[package]
edition = "2018"
name = "dust-lpc11xx"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
description = "Drivers for LPC11xx hardware."
license = "MIT OR Apache-2.0"

[profile.dev]
lto = true

[profile.release]
lto = true

[features]
lpc1114 = ["lpc11xx"]

lpc11xx = []

[dependencies]
dust = { path = "../dust", version = "0.1.0" }
dust-cortex-m = { path = "../dust-cortex-m", version = "0.1.0", features = ["cortex-m0"] }
volatile-register = "0.2.0"
