[package]
name = "dust-lpc13xx"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
license = "MIT OR Apache-2.0"

[profile.dev]
lto = true

[profile.release]
lto = true

[features]
lpc1343 = ["lpc13xx"]

lpc13xx = []

[dependencies]
dust-cortex-m = { path = "../dust-cortex-m", version = "0.1.0", features = ["cortex-m3"] }
volatile-register = "0.2.0"
