[package]
edition = "2021"
name = "dust-lpc8xx"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
description = "Drivers for LPC8xx hardware."
license = "MIT OR Apache-2.0"

[profile.dev]
lto = true

[profile.release]
lto = true

[features]
lpc810 = ["lpc81x"]
lpc811 = ["lpc81x"]
lpc812 = ["lpc81x"]
lpc822 = ["lpc82x"]
lpc824 = ["lpc82x"]
lpc832 = ["lpc83x"]
lpc834 = ["lpc83x"]
lpc844 = ["lpc84x"]
lpc845 = ["lpc84x"]

lpc802 = []
lpc804 = []
lpc81x = []
lpc82x = []
lpc83x = []
lpc84x = []

[dependencies]
dust = { path = "../dust", version = "0.1.0" }
dust-cortex-m = { path = "../dust-cortex-m", version = "0.1.0", features = ["cortex-m0plus"] }
dust-register = { path = "../dust-register", version = "0.1.0" }
volatile-register = "0.2.0"
