[package]
edition = "2018"
name = "dust-stm32f0"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
description = "Drivers for STM32F0 hardware."
license = "MIT OR Apache-2.0"

[profile.dev]
lto = true

[profile.release]
lto = true

[features]
stm32f030x6 = ["stm32f030"]
stm32f030xb = ["stm32f030"]
stm32f070x6 = ["stm32f070"]
stm32f070xb = ["stm32f070"]

stm32f030 = ["stm32f0x0"]
stm32f070 = ["stm32f0x0"]

stm32f0x0 = ["stm32f0"]

stm32f0 = []

[dependencies]
dust = { path = "../dust", version = "0.1.0" }
dust-cortex-m = { path = "../dust-cortex-m", version = "0.1.0", features = ["cortex-m0"] }
volatile-register = "0.2.0"
