[package]
name = "dust-test-plu"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
description = "Test programs for PLU."
license = "MIT OR Apache-2.0"

[profile.dev]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[profile.release]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[features]
lpc804 = ["dust-lpc8xx/lpc804", "lpc8xx"]
lpc8xx = []
[dependencies]
dust = { path = "../dust", version = "0.1.0" }
dust-lpc8xx = { path = "../dust-lpc8xx", version = "0.1.0", optional = true }
