[package]
name = "dust-test-uart"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]

[profile.dev]
lto = true

[profile.release]
lto = true

[features]
lpc810 = ["dust-lpc8xx/lpc810", "lpc8xx"]
lpc812 = ["dust-lpc8xx/lpc812", "lpc8xx"]
lpc824 = ["dust-lpc8xx/lpc824", "lpc8xx"]
lpc845 = ["dust-lpc8xx/lpc845", "lpc8xx"]
lpc1114 = ["dust-lpc11xx/lpc1114", "lpc11xx"]
lpc1343 = ["dust-lpc13xx/lpc1343", "lpc13xx"]

lpc8xx = []
lpc11xx = []
lpc13xx = []


[dependencies]
dust-lpc8xx = { path = "../dust-lpc8xx", version = "0.1.0", optional = true }
dust-lpc11xx = { path = "../dust-lpc11xx", version = "0.1.0", optional = true }
dust-lpc13xx = { path = "../dust-lpc13xx", version = "0.1.0", optional = true }
