cargo-features = ["edition"]

[package]
edition = "2018"
name = "dust-test"
version = "0.1.0"
authors = ["Juergen Stuber <juergen@jstuber.net>"]
description = "Test programs for Dust."
license = "MIT OR Apache-2.0"

[profile.dev]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[profile.release]
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[features]
atsamd09c13 = ["dust-atsamd09/atsamd09c13", "atsamd09"]
atsamd09d14 = ["dust-atsamd09/atsamd09d14", "atsamd09"]
lpc802 = ["dust-lpc8xx/lpc802", "lpc8xx"]
lpc804 = ["dust-lpc8xx/lpc804", "lpc8xx"]
lpc810 = ["dust-lpc8xx/lpc810", "lpc81x"]
lpc812 = ["dust-lpc8xx/lpc812", "lpc81x"]
lpc822 = ["dust-lpc8xx/lpc822", "lpc82x"]
lpc824 = ["dust-lpc8xx/lpc824", "lpc82x"]
lpc845 = ["dust-lpc8xx/lpc845", "lpc84x"]
lpc1114 = ["dust-lpc11xx/lpc1114", "lpc11xx"]
lpc1343 = ["dust-lpc13xx/lpc1343", "lpc13xx"]

lpc81x = ["lpc8xx"]
lpc82x = ["lpc8xx"]
lpc83x = ["lpc8xx"]
lpc84x = ["lpc8xx"]

atsamd09 = []
lpc8xx = []
lpc11xx = []
lpc13xx = []


[dependencies]
dust = { path = "../dust", version = "0.1.0" }
dust-atsamd09 = { path = "../dust-atsamd09", version = "0.1.0", optional = true }
dust-lpc8xx = { path = "../dust-lpc8xx", version = "0.1.0", optional = true }
dust-lpc11xx = { path = "../dust-lpc11xx", version = "0.1.0", optional = true }
dust-lpc13xx = { path = "../dust-lpc13xx", version = "0.1.0", optional = true }
